--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/logo.PNG" alt="bcoc_logo">
+        <img class="logo" src="/images/index.png" alt="logo">
         <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
@@ -50,14 +50,14 @@
 
     <footer>
         <div class="information">
-            <img class="footer_logo" src="images/logo.PNG" alt="footer_logo">
+            <img class="footer_logo" src="images/index.png" alt="footer_logo">
             <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
-            <p>552 Flipton Way, Ohio</p>
+            <p>552 Flipton Way, Cleveland, Ohio 44108</p>
             <p>info@fliptonchamberofcommerce.com ✉</p>
-            <p class="phone">+867-5309 📞</p>
-            <a class="direction" href="https://goo.gl/maps/4gFZojvpySmaJZnT8">Location 📍</a>
+            <p class="phone">216-867-5309 📞</p>
+            <a class="direction" href="https://www.google.com/maps/place/Cleveland+Lakefront+Nature+Preserve/@41.4945739,-81.6968252,12.25z/data=!4m13!1m7!3m6!1s0x8836e97ab54d8ec1:0xe5cd64399c9fd916!2sOhio!3b1!8m2!3d40.4172871!4d-82.907123!3m4!1s0x8830f965913c1cf7:0x944be4d187ee7890!8m2!3d41.5404061!4d-81.6278953">Find us here! 📍</a>
         </div>
         <div class="footer_line">
             <hr>
