--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -50,7 +50,7 @@
 
     <footer>
         <div class="information">
-            <img class="footer_logo" src="images/index.png" alt="footer_logo">
+            <img class="logo" src="images/index.png" alt="logo">
             <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
@@ -65,9 +65,9 @@
             <p>
                 ©
                 <span id="year"></span> 
-                Flipton Chamber of Commerce
+                Flipton Chamber of Commerce|
             </p>
-            <p>Seth Markle | WDD 230 Fall 2022</p>
+            <p>Seth Markle  WDD 230 Fall 2022</p>
             <div id="last-modify"></div>
         </div>
     </footer>
