--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -50,8 +50,8 @@
 
     <footer>
         <div class="information">
-            <img class="logo" src="images/index.png" alt="logo">
             <h3>Flipton Chamber of Commerce</h3>
+            <img class="logo" src="lesson4/images/index.png" alt="">
         </div>
         <div class="contact_info">
             <p>552 Flipton Way, Cleveland, Ohio 44108</p>
