--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
+        <br>
         <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
@@ -51,12 +52,16 @@
     <footer>
         <div class="information">
             <h3>Flipton Chamber of Commerce</h3>
-            <img class="logo" src="lesson4/images/index.png" alt="">
+            <br>
+            <img class="logo" src="/images/index.png" alt="logo">
         </div>
         <div class="contact_info">
             <p>552 Flipton Way, Cleveland, Ohio 44108</p>
+            <br>
             <p>info@fliptonchamberofcommerce.com ✉</p>
+            <br>
             <p class="phone">216-867-5309 📞</p>
+            <br>
             <a class="direction" href="https://www.google.com/maps/place/Cleveland+Lakefront+Nature+Preserve/@41.4945739,-81.6968252,12.25z/data=!4m13!1m7!3m6!1s0x8836e97ab54d8ec1:0xe5cd64399c9fd916!2sOhio!3b1!8m2!3d40.4172871!4d-82.907123!3m4!1s0x8830f965913c1cf7:0x944be4d187ee7890!8m2!3d41.5404061!4d-81.6278953">Find us here! 📍</a>
         </div>
         <div class="footer_line">
