--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
     <title>Chamber of Commerce Project</title>
 </head>
+<style>
+    
+</style>
 <body>
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
