--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
     <title>Chamber of Commerce Project</title>
 </head>
+<style>
+    
+</style>
 <body>
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
@@ -35,45 +38,6 @@
     </header>
 
     <main>
-        <section id="hero">
-            <h3 class="hero-title">Welcome to Flipton.</h3>
-            <div class="call-to-action"><a href="join.html">Join Now</a></div>
-          
-    <picture>
-        <source srcset="/images/view.jpg" media="(min-width: 600px) and (max-width: 1199px)">
-        <source srcset="/images/view.jpg" media="(min-width: 1200px)">
-        <img src="/images/view.jpg" alt="a senic view" loading="lazy">
-    </picture>    
-    </section>
-
-    <section id="join">
-        <h3>Join</h3>
-        <a href="join.html">Join Us!</a>
-        <p>Click here to join the chamber of commerce and check us out.</p>
-    </section>
-    <section id="event">
-        <h3>Fun Walk</h3>
-        <p>Join us for our first annual Fun Walk.</p>
-        <p>Saturday December 17th @ 2:00 PM</p>
-    </section>
-    <section id="weather">
-        <h3>Weather</h3>
-        <img id="weather-icon" src="/images/weather.jpg" alt="weather image" loading="lazy">
-        <p id="condition"></p>
-        <p><span id="temp"></span>&deg;F</p>
-        <p id="clouds">Cloud condition:</p>
-        <hr>
-        <p>Wind Speed: <span id="wind-speed"></span> mph</p>
-        <p>Wind Chill: <span id="wind-chill"></span></p>
-    </section>
-    <section id="news">
-        <h3>This week in Flipton County News</h3>
-        <p>Our monthly board meeting will be held on Tuesday December 13th @7pm.
-        </p>
-    </section>
-    <section id="spotlights">
-        <h3 id="spot0">Spotlights</h3>
-    </section>
         <section class="container">
             <p class="hero">Hero with site name and call to action</p>
             <p class="news">News Release</p>
@@ -92,7 +56,7 @@
         <div class="information">
             <h3>Flipton Chamber of Commerce</h3>
             <br>
-            <img class="logo" src="images/index.png" alt="logo">
+            <img class="logo" src="/images/index.png" alt="logo">
         </div>
         <div class="contact_info">
             <p>552 Flipton Way, Cleveland, Ohio 44108</p>
