--- a/lesson/index.html
+++ b/lesson/index.html
@@ -32,6 +32,7 @@
                     <li>Lesson 08: <a href="../lesson8/index.html">title</a></li>
                     <li>Lesson 09: <a href="../lesson9/index.html">title</a></li>
                     <li>Lesson 10: <a href="../lesson10/index.html">title</a></li>
+                    <li>Lesson 11: <a href="../lesson11/index.html">title</a></li>
                 </ul>
             </div>
             <div class="footer">
