--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -35,6 +35,7 @@
     </header>
 
     <main>
+     
         <section id="hero">
             <h3 class="hero-title">Welcome to Flipton.</h3>
             <div class="call-to-action"><a href="join.html">Join Now</a></div>
@@ -51,7 +52,7 @@
         <a href="join.html">Join Us!</a>
         <p>Click here to join the chamber of commerce and check us out.</p>
     </section>
-    <section id="event">
+    <section id="events">
         <h3>Fun Walk</h3>
         <p>Join us for our first annual Fun Walk.</p>
         <p>Saturday December 17th @ 2:00 PM</p>
@@ -92,7 +93,7 @@
         <div class="information">
             <h3>Flipton Chamber of Commerce</h3>
             <br>
-            <img class="logo" src="images/index.png" alt="logo">
+            <img class="logo" src="/images/index.png" alt="logo">
         </div>
         <div class="contact_info">
             <p>552 Flipton Way, Cleveland, Ohio 44108</p>
@@ -114,7 +115,11 @@
             <p>Seth Markle  WDD 230 Fall 2022</p>
             <div id="last-modify"></div>
         </div>
-    </footer>
+    </footer><script src="scripts/spotlight.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/windchill.js"></script>
+    <script src="scripts/banner.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/date.js"></script>
 </body>
 </html>
