--- a/lesson4/chamber/directory.html
+++ b/lesson4/chamber/directory.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
-    <title>Join Page</title>
+    <title>Directory Page</title>
 </head>
 <body>
     <header>
