--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -26,12 +26,14 @@
         <nav>
             <button id="hamburguer">&#9776;</button>
             <ul id="primaryNav">
-                <li class="nav_menu_item"><a href="index.html" class="nav-link">Discover</a></li>
-                <li class="nav_menu_item"><a href="#" class="nav-link">Directory</a></li>
-                <li class="nav_menu_item"><a href="#" class="nav-link">Join</a></li>
-                <li class="nav_menu_item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav_menu_item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav_menu_item"><a href="discover.html" class="nav-link">Discover</a></li>
+                <li class="nav_menu_item"><a href="directory.html" class="nav-link">Directory</a></li>
+                <li class="nav_menu_item"><a href="join.html" class="nav-link">Join</a></li>
+                <li class="nav_menu_item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
+        <div id="banner"></div>
     </header>
 
     <main>
