--- a/lesson4/chamber/discover.html
+++ b/lesson4/chamber/discover.html
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
-    <title>Chamber of Commerce Project</title>
+    <title>Discover Page</title>
 </head>
 <body>
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
         <br>
-        <h1>Discovery Page</h1>
+        <h1>Discover Page</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
             <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
