--- a/lesson4/chamber/directory.html
+++ b/lesson4/chamber/directory.html
@@ -17,7 +17,7 @@
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
         <br>
-        <h1>Flipton chamber of Commerce</h1>
+        <h1>Directory Page</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
             <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
