--- a/lesson/index.html
+++ b/lesson/index.html
@@ -25,14 +25,14 @@
                 <ul>
                     <li>Lesson 02: <a href="../lesson2/index.html">Design Principles</a></li>
                     <li>Lesson 03: <a href="../lesson3/index.html">Site Planning Page</a></li>
-                    <li>Lesson 04: <a href="../lesson4/chamber/index.html">Flipton County Homepage</a></li>
-                    <li>Lesson 05: <a href="../lesson5/index.html">title</a></li>
-                    <li>Lesson 06: <a href="../lesson6/index.html">title</a></li>
-                    <li>Lesson 07: <a href="../lesson7/index.html">title</a></li>
-                    <li>Lesson 08: <a href="../lesson8/index.html">title</a></li>
-                    <li>Lesson 09: <a href="../lesson9/index.html">title</a></li>
-                    <li>Lesson 10: <a href="../lesson10/index.html">title</a></li>
-                    <li>Lesson 11: <a href="../lesson11/index.html">title</a></li>
+                    <li>Lesson 04: <a href="../lesson4/chamber/index.html">Chamber Homepage</a></li>
+                    <li>Lesson 05: <a href="../lesson5/index.html">Continued</a></li>
+                    <li>Lesson 06: <a href="../lesson6/index.html">Responsive Design</a></li>
+                    <li>Lesson 07: <a href="../lesson7/index.html">Discover Page</a></li>
+                    <li>Lesson 08: <a href="../lesson8/index.html">Join Page</a></li>
+                    <li>Lesson 09: <a href="../lesson9/index.html">Directory Page</a></li>
+                    <li>Lesson 10: <a href="../lesson10/index.html">Weather Widget</a></li>
+                    <li>Lesson 11: <a href="../lesson11/index.html">Final Chamber Website</a></li>
                 </ul>
             </div>
             <div class="footer">
