--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -40,8 +40,7 @@
     <main>
         <section class="container">
             <div class="hero">
-                <img src="images/hero.jpg" alt="hero_image"
-                     srcset="images/hero_small.jpg 620w, images/hero_medium.jpg 950w, images/hero_large.jpg 1500w">
+                <img src="/images/hero.jpg" alt="hero_image">
                 <div class="hero_title">
                     <h2>Welcome to Flipton County</h2>
                 </div>
@@ -52,7 +51,7 @@
 
             <div class="events">
                 <h2>Upcoming Events</h2>
-                <img src="images/event.jpg" alt="event_logo">
+                <img src="/images/event.jpg" alt="event_logo">
                 <p>Come join us for our Fun Walk!</p>
                 <p>Saturday December 17th @ 2pm.</p>
             </div>
@@ -101,7 +100,7 @@
             <img class="logo" src="/images/index.png" alt="logo">
         </div>
         <div class="contact_info">
-            <p>552 Flipton Way, Cleveland, Ohio 44108</p>
+            <p>552 Flipton Way, Flipton, Ohio 44108</p>
             <br>
             <p>info@fliptonchamberofcommerce.com ✉</p>
             <br>
