--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/images/index.png" alt="logo">
+        <img class="logo" src="images/index.png" alt="logo">
         <br>
         <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
@@ -40,7 +40,7 @@
     <main>
         <section class="container">
             <div class="hero">
-                <img src="/images/hero.jpg" alt="hero_image">
+                <img src="images/hero.jpg" alt="hero_image">
                 <div class="hero_title">
                     <h2>Welcome to Flipton County</h2>
                 </div>
@@ -51,7 +51,7 @@
 
             <div class="events">
                 <h2>Upcoming Events</h2>
-                <img src="/images/event.jpg" alt="event_logo">
+                <img src="images/event.jpg" alt="event_logo">
                 <p>Come join us for our Fun Walk!</p>
                 <p>Saturday December 17th @ 2pm.</p>
             </div>
@@ -97,7 +97,7 @@
         <div class="information">
             <h3>Flipton Chamber of Commerce</h3>
             <br>
-            <img class="logo" src="/images/index.png" alt="logo">
+            <img class="logo" src="images/index.png" alt="logo">
         </div>
         <div class="contact_info">
             <p>552 Flipton Way, Flipton, Ohio 44108</p>
