--- a/lesson4/chamber/directory.html
+++ b/lesson4/chamber/directory.html
@@ -35,3 +35,50 @@
         </nav>
         <div id="banner"></div>
     </header>
+
+    <main class="directory">
+        <h1>Directory</h1>
+        <div class="grid_list_button">
+            <button id="list">&#9636;</button>
+            <button id="grid">&#9638;</button>
+        </div>
+        <article class="directory_container grid">
+            <div class="cards"></div>
+        </article>
+
+    </main>
+
+    <footer>
+        <div class="information">
+            <h3>Flipton Chamber of Commerce</h3>
+            <br>
+            <img class="logo" src="images/index.png" alt="logo">
+        </div>
+        <div class="contact_info">
+            <p>552 Flipton Way, Flipton, Ohio 44108</p>
+            <br>
+            <p>info@fliptonchamberofcommerce.com ✉</p>
+            <br>
+            <p class="phone">216-867-5309 📞</p>
+            <br>
+            <a class="direction" href="https://www.google.com/maps/place/Cleveland+Lakefront+Nature+Preserve/@41.4945739,-81.6968252,12.25z/data=!4m13!1m7!3m6!1s0x8836e97ab54d8ec1:0xe5cd64399c9fd916!2sOhio!3b1!8m2!3d40.4172871!4d-82.907123!3m4!1s0x8830f965913c1cf7:0x944be4d187ee7890!8m2!3d41.5404061!4d-81.6278953">Find us here! 📍</a>
+        </div>
+        <div class="footer_line">
+            <hr>
+            <br>
+            <p>
+                ©
+                <span id="year"></span> 
+                Flipton Chamber of Commerce|
+            </p>
+            <p>Seth Markle  WDD 230 Fall 2022</p>
+            <div id="last-modify"></div>
+        </div>
+    </footer><script src="scripts/spotlight.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/windchill.js"></script>
+    <script src="scripts/banner.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/date.js"></script>
+</body>
+</html>
