--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -17,7 +17,7 @@
     <header>
         <img class="logo" src="images/index.png" alt="logo">
         <br>
-        <h1>Flipton chamber of Commerce</h1>
+        <h1>Flipton Chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
             <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
@@ -78,6 +78,7 @@
             <div class="news">
                 <h2>News</h2>
                 <p>We would like to congratulate Mrs. Evans for winning our recent cherry pie contest.</p>
+                <p>Winter is coming we will be making readiness kits with details coming soon.</p>
             </div>
 
             <div class="join">
