--- a/lesson4/chamber/join.html
+++ b/lesson4/chamber/join.html
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
-    <title>Join Page</title>
+    <title>Directory Page</title>
 </head>
 <body>
     <header>
         <img class="logo" src="/images/index.png" alt="logo">
         <br>
-        <h1>Join Page</h1>
+        <h1>Directory Page</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
             <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
@@ -35,3 +35,40 @@
         </nav>
         <div id="banner"></div>
     </header>
+
+    
+
+    <footer>
+        <div class="information">
+            <h3>Flipton Chamber of Commerce</h3>
+            <br>
+            <img class="logo" src="images/index.png" alt="logo">
+        </div>
+        <div class="contact_info">
+            <p>552 Flipton Way, Flipton, Ohio 44108</p>
+            <br>
+            <p>info@fliptonchamberofcommerce.com ✉</p>
+            <br>
+            <p class="phone">216-867-5309 📞</p>
+            <br>
+            <a class="direction" href="https://www.google.com/maps/place/Cleveland+Lakefront+Nature+Preserve/@41.4945739,-81.6968252,12.25z/data=!4m13!1m7!3m6!1s0x8836e97ab54d8ec1:0xe5cd64399c9fd916!2sOhio!3b1!8m2!3d40.4172871!4d-82.907123!3m4!1s0x8830f965913c1cf7:0x944be4d187ee7890!8m2!3d41.5404061!4d-81.6278953">Find us here! 📍</a>
+        </div>
+        <div class="footer_line">
+            <hr>
+            <br>
+            <p>
+                ©
+                <span id="year"></span> 
+                Flipton Chamber of Commerce|
+            </p>
+            <p>Seth Markle  WDD 230 Fall 2022</p>
+            <div id="last-modify"></div>
+        </div>
+    </footer><script src="scripts/spotlight.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/windchill.js"></script>
+    <script src="scripts/banner.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/date.js"></script>
+</body>
+</html>
