--- a/lesson4/chamber/join.html
+++ b/lesson4/chamber/join.html
@@ -75,32 +75,24 @@
                     </ul>
                 </div>
                 <div class="bronzemember">
-                    <h2>Bonze Membership</h2>
+                    <h2>Bronze Membership</h2>
                     <ul>
-                        <li>With the bronze membership, you are part of our group</li>
-                        <li>You have a 5% discount on all our companies members</li>
-                        <li>Access to selected conferences and talks</li>
-                        <li>Price: 50bs per month</li>
+                        <li>You will be given a 5% discount on all paid services.</li>
+                        <li>Price: $9.99 per month</li>
                     </ul>
                 </div>
                 <div class="silvermember">
                     <h2>Silver Membership</h2>
                     <ul>
-                        <li>You will have a 7% discount on all our companies members</li>
-                        <li>Support with our experts, 2 sessions per month to help to grow your bussines</li>
-                        <li>Access to all conferences and talks</li>
-                        <li>Price: 100bs per month</li>
+                        <li>You will have a 10% discount on all paid services.</li>
+                        <li>Price: 7.99 per month</li>
                     </ul>
                 </div>
                 <div class="goldmember">
                     <h2>Gold Membership</h2>
                     <ul>
-                        <li>You will have a 10% and 15% discount in all our companies members</li>
-                        <li>Support with a complete team to solve problems and archive goals</li>
-                        <li>Meetings, conferences, and talks with special guests</li>
-                        <li>As a part of our gold membership, you are part of a group of investors</li>
-                        <li>Enabled our investment funds and loans</li>
-                        <li>Price: 200bs per month</li>
+                        <li>You will have a 15% discount on all paid services.</li>
+                        <li>Price: 5.99 per month</li>
                     </ul>
                 </div>
             </div>
