--- a/lesson4/chamber/directory.html
+++ b/lesson4/chamber/directory.html
@@ -35,7 +35,17 @@
         <div id="banner"></div>
     </header>
 
-    
+    <main class="directory">
+        <h1>Directory</h1>
+        <div class="grid_list_button">
+            <button id="list">&#9636;</button>
+            <button id="grid">&#9638;</button>
+        </div>
+        <article class="directory_container grid">
+            <div class="cards"></div>
+        </article>
+
+    </main>
 
     <footer>
         <div class="information">
