--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="Assignment portal Christian Soldevilla in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="description" content="home page setup for wdd 230>
     <title>Seth Markle's Assignment Portal</title>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/small.css">
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <img src="/images/me.jpg" alt="a picture of me">
-            <h1>Christian Soldevilla</h1>
+            <h1>Seth Markle</h1>
     
         </header>
         <main>
