--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </main>
         <footer>
-            <p>&copy; <span id="currentYear"></span> | Christian Soldevilla | Puno, Peru | <a target="_blank"
+            <p>&copy; <span id="currentYear"></span> | Seth Markle <a target="_blank"
                     href="https://www.byui.edu/online">BYUI Online Learning</a></p>
             <p>Last Updated: <span id="updatedDate"></span></p>
         </footer>
