--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <main>
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a></li>
-                <li>Lesson 03: <a href="/lesson3/">Website Planning Document</a></li>
-                <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Town Page</a></li>
-                <li>Lesson 05: <a href="/lesson5/preston-5.html">Preston Town Page Continued</a></li>
-                <li>Lesson 06: <a href="/lesson6/preston-6.html">Preston Town Page Continued II</a></li>
-                <li>Lesson 07: <a href="/lesson7/lazyload.html">Progressive Loading of Images</a></li>
-                <li>Lesson 07: <a href="/lesson7-2/gallery-7.html">Gallery</a></li>
-                <li>Lesson 08: <a href="/lesson-8/tablebuild.html">Table Build</a></li>
-                <li>Lesson 08: <a href="/lesson-8/stormcenter.html">Storm Center</a></li>
-                <li>Lesson 09: <a href="/lesson-9/prophets.html">Latter-day Prophets</a></li>
-                <li>Lesson 09: <a href="/lesson-9/index.html">The Weather Site Home Page</a></li>
-                <li>Lesson 10: <a href="/lesson-10/preston-10.html">Preston Weather API</a></li>
-                <li>Lesson 11: <a href="/lesson-11/index.html">The Weather Site</a></li>
-                <li>Lesson 12: <a href="/lesson-12/index.html">CSS Preprocessor</a></li>
+                <li>Lesson 02: <a href="/lesson2/design-principles.html">Title</a></li>
+                <li>Lesson 03: <a href="/lesson3/">Title</a></li>
+                <li>Lesson 04: <a href="/lesson4/preston-4.html">Title</a></li>
+                <li>Lesson 05: <a href="/lesson5/preston-5.html">Title</a></li>
+                <li>Lesson 06: <a href="/lesson6/preston-6.html">Title</a></li>
+                <li>Lesson 07: <a href="/lesson7/lazyload.html">Title</a></li>
+                <li>Lesson 07: <a href="/lesson7-2/gallery-7.html">Title</a></li>
+                <li>Lesson 08: <a href="/lesson-8/tablebuild.html">Title</a></li>
+                <li>Lesson 08: <a href="/lesson-8/stormcenter.html">Title</a></li>
+                <li>Lesson 09: <a href="/lesson-9/prophets.html">Title</a></li>
+                <li>Lesson 09: <a href="/lesson-9/index.html">Title</a></li>
+                <li>Lesson 10: <a href="/lesson-10/preston-10.html">Title</a></li>
+                <li>Lesson 11: <a href="/lesson-11/index.html">Title</a></li>
+                <li>Lesson 12: <a href="/lesson-12/index.html">Title</a></li>
             </ul>
         </main>
         <footer>
