--- a/index.html
+++ b/index.html
@@ -20,20 +20,16 @@
         <main>
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="/lesson2/design-principles.html">Title</a></li>
+                <li>Lesson 02: <a href="/lesson2/">Title</a></li>
                 <li>Lesson 03: <a href="/lesson3/">Title</a></li>
-                <li>Lesson 04: <a href="/lesson4/preston-4.html">Title</a></li>
-                <li>Lesson 05: <a href="/lesson5/preston-5.html">Title</a></li>
-                <li>Lesson 06: <a href="/lesson6/preston-6.html">Title</a></li>
-                <li>Lesson 07: <a href="/lesson7/lazyload.html">Title</a></li>
-                <li>Lesson 07: <a href="/lesson7-2/gallery-7.html">Title</a></li>
-                <li>Lesson 08: <a href="/lesson-8/tablebuild.html">Title</a></li>
-                <li>Lesson 08: <a href="/lesson-8/stormcenter.html">Title</a></li>
-                <li>Lesson 09: <a href="/lesson-9/prophets.html">Title</a></li>
-                <li>Lesson 09: <a href="/lesson-9/index.html">Title</a></li>
-                <li>Lesson 10: <a href="/lesson-10/preston-10.html">Title</a></li>
-                <li>Lesson 11: <a href="/lesson-11/index.html">Title</a></li>
-                <li>Lesson 12: <a href="/lesson-12/index.html">Title</a></li>
+                <li>Lesson 04: <a href="/lesson4/">Title</a></li>
+                <li>Lesson 05: <a href="/lesson5/">Title</a></li>
+                <li>Lesson 06: <a href="/lesson6/">Title</a></li>
+                <li>Lesson 07: <a href="/lesson7/">Title</a></li>
+                <li>Lesson 08: <a href="/lesson8/">Title</a></li>
+                <li>Lesson 09: <a href="/lesson9">Title</a></li>
+                <li>Lesson 10: <a href="/lesson10/">Title</a></li>
+                <li>Lesson 11: <a href="/lesson11/">Title</a></li>
             </ul>
         </main>
         <footer>
