--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 06: <a href="/lesson6/">Title</a></li>
                 <li>Lesson 07: <a href="/lesson7/">Title</a></li>
                 <li>Lesson 08: <a href="/lesson8/">Title</a></li>
-                <li>Lesson 09: <a href="/lesson9">Title</a></li>
+                <li>Lesson 09: <a href="/lesson9/">Title</a></li>
                 <li>Lesson 10: <a href="/lesson10/">Title</a></li>
                 <li>Lesson 11: <a href="/lesson11/">Title</a></li>
             </ul>
