--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="/images/me.jpg" alt="a picture of me">
+            <img src="/images/profile.png" alt="">
             <h1>Seth Markle</h1>
     
         </header>
