--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230>
     <title>Seth Markle's Assignment Portal</title>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/small.css">
-    <link rel="stylesheet" href="/css/medium.css">
+    <link rel="stylesheet" href="/styles/homepage.css">
 </head>
 <body>
     <div class="container">
