--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
                 }
             });
     </script>
-    <script src="/js/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
