--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <script>
             WebFont.load({
             google: {
-                families: ['Roboto'] 
+                families: ['Gugi'] 
             }});
         </script>
     </body>
