--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230>
     <title>Seth Markle's Assignment Portal</title>
-    <link rel="stylesheet" href="/styles/homepage.css">
+    <link ref="stylesheet" href="/normalize.css">
+    <link ref="stylesheet" href="/homepage.css">
 </head>
 <body>
     <div class="container">
