--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <title>Seth Markle's Assignment Portal</title>
-    <link ref="stylesheet" href="/normalize.css">
-    <link ref="stylesheet" href="/homepage.css">
+    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="/homepage.css">
 </head>
 <body>
     <div class="container">
