--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </main>
         <footer class="footer">
             <p>
-                &copy; 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+                &copy; Winter Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
             </p>
             <p class="last-update" id="lastModified"></p>
         </footer>
