--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
             <p class="last-update" id="lastModified"></p>
         </footer>
-        <h1>Demo: Current Date</h1>
+        <h1>Last Updated</h1>
         <p id="p1"></p>
         <script>
             var date = new Date();
