--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <title>Seth Markle's Assignment Portal</title>
     <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/homepage.css">
+    <link rel="stylesheet" href="/medium.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
