--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230>
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <title>Seth Markle's Assignment Portal</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/medium.css">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/medium.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
-
-<body>
-    
+<body>    
         <header>
             <img src="/images/profile.png" alt="">
             <h1>Seth Markle</h1>
