--- a/lesson02/designprinciples.htm
+++ b/lesson02/designprinciples.htm
@@ -24,19 +24,19 @@
             <div class="grid">
                 <div class="card">
                     <h2>Visual Hierarchy</h2>
-                    <img src="img/dropbox.jpg" alt="Dropbox screenshot">
+                    <img src="/images/byui-edu-rule-of-thirds.jpg" alt="Dropbox screenshot">
                     <p>Visual Hierarchy is well exemplified here because we can distinguish easily which content is more impotant</p>
                     <p>We could identify which is the title and where is the navigation and where the rest of the content</p>
                 </div>
                 <div class="card">
                     <h2>White Space & Clean Design</h2>
-                    <img src="img/dribbble.jpg" alt="Dribbble screenshot">
+                    <img src="/images/github.jpg" alt="Dribbble screenshot">
                     <p>Here we can see how there is enough space between elements.</p>
                     <p>Enough white space makes the design cleaner and easier to read</p>
                 </div>
                 <div class="card">
                     <h2>Hick's Law</h2>
-                    <img src="img/gearbest.jpg" alt="Gearbest screenshot">
+                    <img src="/images/googlefonts.jpg" alt="Gearbest screenshot">
                     <p>Gearbest it's a good example of Hick's law because instead of having a large number of options and lists, 
                         They use simple icons to represent categories and make the user's choice less complicated.</p>
                 </div>
