--- a/lesson02/designprinciples.htm
+++ b/lesson02/designprinciples.htm
@@ -38,7 +38,7 @@
                   <div>
                     <h3>Heirarchy</h3>
                   </div>
-                  <p>Unity</p>
+                  <p>GitHub</p>
                   <p><a href="https://github.com/" target="blank">github.com</a></p>
                   <img src="/images/github.jpg" alt="Homescreen for github.com"/>
                   <p>
