--- a/lesson02/designprinciples.htm
+++ b/lesson02/designprinciples.htm
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/small.css">
     <link rel="stylesheet" href="/styles/medium.css">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/large.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
     <title>Design Principles</title>
 </head>
 <body>
