--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
-                <li>Lesson 02: <a href="/lesson2/">Title</a></li>
+                <li>Lesson 02: <a href="/lesson2/">Principles of Design</a></li>
                 <li>Lesson 03: <a href="/lesson3/">Title</a></li>
                 <li>Lesson 04: <a href="/lesson4/">Title</a></li>
                 <li>Lesson 05: <a href="/lesson5/">Title</a></li>
@@ -35,7 +35,7 @@
         </main>
         <footer class="footer">
             <p>
-                &copy; Winter Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+                &copy; Winter Term 2022 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
             </p>
             <p class="last-update" id="lastModified"></p>
         </footer>
