--- a/lesson2/designprinciples.htm
+++ b/lesson2/designprinciples.htm
@@ -58,7 +58,7 @@
                   <p><a href="https://fonts.google.com/" target="blank">fonts.google.com</a></p>
                   <img src="/images/googlefonts.jpg" alt="Homescreen for Google Fonts"/>
                   <p>
-                  Here the page is broken up using a grid<br>
+                  Here the page is broken up using a grid.<br>
                   This helps keep the google fonts page organized and easier to read.<br>  
                   </p>
                 </section>
