--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <title>Seth Markle's Assignment Portal</title>
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/small.css">
     <link rel="stylesheet" href="/styles/medium.css">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/large.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
 </head>
 <body>    
         <header>
@@ -21,7 +22,7 @@
         <main>
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
-                <li>Lesson 02: <a href="/lesson2/">Principles of Design</a></li>
+                <li>Lesson 02: <a href="../lesson2/">Principles of Design</a></li>
                 <li>Lesson 03: <a href="/lesson3/">Website Planning Document</a></li>
                 <li>Lesson 04: <a href="/lesson4/">Title</a></li>
                 <li>Lesson 05: <a href="/lesson5/">Title</a></li>
