--- a/lesson2/designprinciples.htm
+++ b/lesson2/designprinciples.htm
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
+    
+    <link rel="stylesheet" href="/styles/style2.css">
     <link rel="stylesheet" href="/styles/small.css">
     <link rel="stylesheet" href="/styles/medium.css">
     <link rel="stylesheet" href="/styles/large.css">
