--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="home page setup for wdd 230>
+    <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <title>Seth Markle's Assignment Portal</title>
     <link rel="stylesheet" href="/styles/small.css">
     <link rel="stylesheet" href="/styles/medium.css">
     <link rel="stylesheet" href="/styles/large.css">
     <link rel="stylesheet" href="/styles/normalize.css">
+    <title>Seth Markle's Assignment Portal</title>
 </head>
 <body>    
         <header>
@@ -22,7 +22,7 @@
         <main>
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
-                <li>Lesson 02: <a href="../lesson2/">Principles of Design</a></li>
+                <li>Lesson 02: <a href="/lesson2/">Principles of Design</a></li>
                 <li>Lesson 03: <a href="/lesson3/">Website Planning Document</a></li>
                 <li>Lesson 04: <a href="/lesson4/">Title</a></li>
                 <li>Lesson 05: <a href="/lesson5/">Title</a></li>
