--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
-                <li>Lesson 02: <a href="/lesson2/">Principles of Design</a></li>
+                <li>Lesson 02: <a href="/lesson2">Principles of Design</a></li>
                 <li>Lesson 03: <a href="/lesson3/">Website Planning Document</a></li>
                 <li>Lesson 04: <a href="/lesson4/">Title</a></li>
                 <li>Lesson 05: <a href="/lesson5/">Title</a></li>
