--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <main>
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
-                <li>Lesson 02: <a href="/lesson2">Principles of Design</a></li>
-                <li>Lesson 03: <a href="/lesson3/">Website Planning Document</a></li>
-                <li>Lesson 04: <a href="/lesson4/">Title</a></li>
-                <li>Lesson 05: <a href="/lesson5/">Title</a></li>
-                <li>Lesson 06: <a href="/lesson6/">Title</a></li>
-                <li>Lesson 07: <a href="/lesson7/">Title</a></li>
-                <li>Lesson 08: <a href="/lesson8/">Title</a></li>
-                <li>Lesson 09: <a href="/lesson9/">Title</a></li>
+                <li>Lesson 2: <a href="/lesson2/designprinciples.html">Principles of Design</a></li>
+                <li>Lesson 3: <a href="/lesson3/">Website Planning Document</a></li>
+                <li>Lesson 4: <a href="/lesson4/">Title</a></li>
+                <li>Lesson 5: <a href="/lesson5/">Title</a></li>
+                <li>Lesson 6: <a href="/lesson6/">Title</a></li>
+                <li>Lesson 7: <a href="/lesson7/">Title</a></li>
+                <li>Lesson 8: <a href="/lesson8/">Title</a></li>
+                <li>Lesson 9: <a href="/lesson9/">Title</a></li>
                 <li>Lesson 10: <a href="/lesson10/">Title</a></li>
                 <li>Lesson 11: <a href="/lesson11/">Title</a></li>
             </ul>
