--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>WDD 230: Assignment Portal</h1>
             <ul>
                 <li>Lesson 2: <a href="/lesson2/designprinciples.html">Principles of Design</a></li>
-                <li>Lesson 3: <a href="/lesson3/">Website Planning Document</a></li>
+                <li>Lesson 3: <a href="/lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 4: <a href="/lesson4/">Title</a></li>
                 <li>Lesson 5: <a href="/lesson5/">Title</a></li>
                 <li>Lesson 6: <a href="/lesson6/">Title</a></li>
