--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,25 +15,25 @@
 </head>
 <body>    
     <header>
-        <img src="/chamberimages/index.png" alt="">
+        <img src="/chamber/images/index.png" alt="">
         <div class="title">
-            <h1>Real Weather Today</h1>
-            <h3>Whenever and Wherever You Need</h3>
+            <h1>Flipton Chamber of Commerce</h1>
+            <h2>We put the flip in Flipton.</h2>
         </div>
     </header>
     <nav>
         <ul class="navigation">
             <li><a href="#" id="hamBtn">&#9776; Menu</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#"></a>News Release</li>
+            <li><a href="#"></a>Join</li>
+            <li><a href="#"></a>Event</li>
+            <li><a href="#"></a>Weather</li>
             <li><a href="#"></a></li>
         </ul>
     </nav>
     <main>
-        <h2>Flipton News</h2>
+        <h2></h2>
         <div class="temporary">
             <p></p>
         </div>
