--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,22 +29,25 @@
             <li><a href="#"></a>Join</li>
             <li><a href="#"></a>Event</li>
             <li><a href="#"></a>Weather</li>
-            <li><a href="#"></a></li>
+            <li><a href="#"></a>Contact Us</li>
         </ul>
     </nav>
     <main>
-        <h2></h2>
+        <h2>Information</h2>
         <div class="temporary">
-            <p></p>
+            <p>News Release</p>
         </div>
         <div class="temporary">
-            <p></p>
+            <p>Join</p>
         </div>
         <div class="temporary">
-            <p></p>
+            <p>Event</p>
         </div>
         <div class="temporary">
-            <p></p>
+            <p>Weather</p>
+        </div>
+        <div class="temporary">
+            <p>Contact Us</p>
         </div>
     </main>
     <footer class="footer">
