--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>    
         <header>
             <h1>Seth Markle</h1>
-            <img src="/images/profile.png" alt="">
+            <img src="images/profile.png" alt="">
             </header>
         <main>
             <h1>WDD 230: Assignment Portal</h1>
