--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,15 +7,15 @@
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/styles/small.css">
-    <link rel="stylesheet" href="/styles/medium.css">
-    <link rel="stylesheet" href="/styles/large.css">
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <title>Seth Markle's Assignment Portal</title>
 </head>
 <body>    
     <header>
-        <img src="/chamber/images/index.png" alt="">
+        <img src="chamber/images/index.png" alt="">
         <div class="title">
             <h1>Flipton Chamber of Commerce</h1>
             <h2>We put the flip in Flipton.</h2>
