--- a/lesson3/colorscheme.html
+++ b/lesson3/colorscheme.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
             <section class="color-scheme">
-                <img src="/images/coolors.co.png" alt="coolors screenshot">
+                <img src="images/coolors.co.png" alt="coolors screenshot">
                     <h2>Primary Color 1</h2>
                     <h3>#031D44</h3>
                     <h2>Primary Color 2</h2>
