--- a/lesson3/sitemap.html
+++ b/lesson3/sitemap.html
@@ -7,10 +7,10 @@
         <meta name="description" content="mind map for website">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="/styles/small.css">
-        <link rel="stylesheet" href="/styles/medium.css">
-        <link rel="stylesheet" href="/styles/large.css">
-        <link rel="stylesheet" href="/styles/normalize.css">
+        <link rel="stylesheet" href="styles/small.css">
+        <link rel="stylesheet" href="styles/medium.css">
+        <link rel="stylesheet" href="styles/large.css">
+        <link rel="stylesheet" href="styles/normalize.css">
         <body>
             <div class="container">
                 <header>
@@ -36,7 +36,7 @@
                     </ul>
                 </nav>
                 <body>
-                    <img src="/images/map.png" alt="domain info">
+                    <img src="images/map.png" alt="domain info">
                 </body>
             <footer class="footer">
                 <p>
