--- a/lesson2/designprinciples.html
+++ b/lesson2/designprinciples.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/styles/style2.css">
+    <link rel="stylesheet" href="styles/style2.css">
     <title>Design Principles</title>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Seth Markle</h1>
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
         </header>
         <main>
             <h1>Design Principles</h1>
@@ -26,7 +26,7 @@
                   </div>
                   <p>BYU-Idaho Home Page</p>
                   <p><a href="https://www.byui.edu/" target="blank">byui.edu</a></p>
-                  <img src="/images/byui-edu-rule-of-thirds.jpg" alt="Homescreen for byui.edu"/>
+                  <img src="images/byui-edu-rule-of-thirds.jpg" alt="Homescreen for byui.edu"/>
                   <p>
                   In this section we have a contrast of images.<br>
                   Each image of something happening at BYU-Idaho.<br>
@@ -40,7 +40,7 @@
                   </div>
                   <p>GitHub</p>
                   <p><a href="https://github.com/" target="blank">github.com</a></p>
-                  <img src="/images/github.jpg" alt="Homescreen for github.com"/>
+                  <img src="images/github.jpg" alt="Homescreen for github.com"/>
                   <p>
                   In this section the GitHub page shows the ammount of white space.<br>
                   This makes the page more pleasing to the eyes because it directs us to what we should see.<br>   
@@ -53,7 +53,7 @@
                   </div>
                   <p>Google Fonts</p>
                   <p><a href="https://fonts.google.com/" target="blank">fonts.google.com</a></p>
-                  <img src="/images/googlefonts.jpg" alt="Homescreen for Google Fonts"/>
+                  <img src="images/googlefonts.jpg" alt="Homescreen for Google Fonts"/>
                   <p>
                   Here the page is broken up using a grid.<br>
                   This helps keep the google fonts page organized and easier to read.<br>  
