--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/styles/small.css">
-    <link rel="stylesheet" href="/styles/medium.css">
-    <link rel="stylesheet" href="/styles/large.css">
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <div class="container">
@@ -51,7 +51,7 @@
                 </section>
                 <section class="logo">
                     <h3>Logo</h3>
-                    <img src="/images/index.png" alt="logo">
+                    <img src="images/index.png" alt="logo">
                 </section>
             </article>
         </main>
