--- a/lesson2/designprinciples.html
+++ b/lesson2/designprinciples.html
@@ -26,7 +26,7 @@
                   </div>
                   <p>BYU-Idaho Home Page</p>
                   <p><a href="https://www.byui.edu/" target="blank">byui.edu</a></p>
-                  <img src="images/byui-edu-rule-of-thirds.jpg" alt="Homescreen for byui.edu"/>
+                  <img src="../images/byui-edu-rule-of-thirds.jpg" alt="Homescreen for byui.edu"/>
                   <p>
                   In this section we have a contrast of images.<br>
                   Each image of something happening at BYU-Idaho.<br>
