--- a/lesson2/designprinciples.html
+++ b/lesson2/designprinciples.html
@@ -40,7 +40,7 @@
                   </div>
                   <p>GitHub</p>
                   <p><a href="https://github.com/" target="blank">github.com</a></p>
-                  <img src="images/github.jpg" alt="Homescreen for github.com"/>
+                  <img src="../images/github.jpg" alt="Homescreen for github.com"/>
                   <p>
                   In this section the GitHub page shows the ammount of white space.<br>
                   This makes the page more pleasing to the eyes because it directs us to what we should see.<br>   
@@ -53,7 +53,7 @@
                   </div>
                   <p>Google Fonts</p>
                   <p><a href="https://fonts.google.com/" target="blank">fonts.google.com</a></p>
-                  <img src="images/googlefonts.jpg" alt="Homescreen for Google Fonts"/>
+                  <img src="../images/googlefonts.jpg" alt="Homescreen for Google Fonts"/>
                   <p>
                   Here the page is broken up using a grid.<br>
                   This helps keep the google fonts page organized and easier to read.<br>  
