--- a/lesson3/colorscheme.html
+++ b/lesson3/colorscheme.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assignment ">
     <title>Design</title>
-    <link rel="stylesheet" href=".css">
     <link href="https://fonts.googleapis.com/" rel="stylesheet">
-    <link rel="stylesheet" href=".css">
+    <link rel="stylesheet" href="../styles/small.css">
+    <link rel="stylesheet" href="../styles/medium.css">
+    <link rel="stylesheet" href="../styles/large.css">
 </head>
 
 <body>
