--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -51,7 +51,7 @@
                 </section>
                 <section class="logo">
                     <h3>Logo</h3>
-                    <img src="images/index.png" alt="logo">
+                    <img src="../images/index.png" alt="logo">
                 </section>
             </article>
         </main>
